refactor: converting js into Lit ts component

--- a/src/scripts/pages/options.html
+++ b/src/scripts/pages/options.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Save my Chatbot - Export Options</title>
-  <link rel="stylesheet" href="pages.css">
+  <link rel="stylesheet" href="ExportOptions.css">
+  <script type="module" src="ExportOptions.js"></script>
 </head>
 <body>
-<main id="options-container" class="container"></main>
-<script src="pages.js"></script>
+<export-options></export-options>
 </body>
 </html>
