refactor: moving entrypoints into the same directory and combining all pages entrypoints into pages.ts

--- a/src/entrypoints/options.html
+++ b/src/entrypoints/options.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Save my Chatbot - Export Options</title>
-  <link rel="stylesheet" href="ExportOptions.css">
-  <script type="module" src="ExportOptions.js"></script>
+  <link rel="stylesheet" href="pages.css">
+  <script type="module" src="pages.js"></script>
 </head>
 <body>
 <export-options></export-options>
